# obs-pipewire

./: CMakeLists.txt  README.md
cmake/: FindPipeWire.cmake
src/: main.c  pipeclient.c  pipeclient.h  source_info.c  source_info.h
